加入多环境部署