@@ -150,131 +150,59 @@
 
 	</dependencies>
 
-	<build>
-		<finalName>${project.artifactId}-${project.version}</finalName>
-		<resources>
-			<resource>
-				<directory>src/main/java</directory>
-				<excludes>
-					<exclude>**/*.java</exclude>
-				</excludes>
-			</resource>
-			<resource>
-				<directory>src/main/resources</directory>
-			</resource>
-
-			<!-- 输出当前项目的版本号-start -->
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-				<targetPath>${basedir}/target/${project.artifactId}-${project.version}</targetPath>
-				<excludes>
-					<exclude>*/*</exclude>
-					<exclude>*.xml</exclude>
-					<exclude>*.properties</exclude>
-				</excludes>
-			</resource>
-			<!-- 输出当前项目的版本号-end -->
-		</resources>
-		<testResources>
-			<testResource>
-				<directory>src/test/java</directory>
-			</testResource>
-			<testResource>
-				<directory>src/test/resources</directory>
-			</testResource>
-		</testResources>
+	
+<build>
+		<finalName>revolution-demo</finalName>
 		<plugins>
+			<!-- portable config -->
+			<plugin>
+				<groupId>com.juvenxu.portable-config-maven-plugin</groupId>
+				<artifactId>portable-config-maven-plugin</artifactId>
+				<version>1.1.5</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>replace-package</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<portableConfig>src/main/portable/${project.activeProfiles[0].id}.xml</portableConfig>
+
+				</configuration>
+			</plugin>
+
+			<!-- war跳过install和deploy -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
+				<artifactId>maven-install-plugin</artifactId>
+				<version>2.5.1</version>
 				<configuration>
 					<skip>true</skip>
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
 				<configuration>
-					<connectors>
-						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-							<port>9011</port>
-							<maxIdleTime>60000</maxIdleTime>
-						</connector>
-					</connectors>
-					<reload>automatic</reload>
-					<scanIntervalSeconds>0</scanIntervalSeconds>
-					<systemProperties>
-						<systemProperty>
-							<name>org.mortbay.util.URI.charset</name>
-							<value>UTF-8</value>
-						</systemProperty>
-					</systemProperties>
-					<jvmArgs>-Xmx512m -XX:PermSize=128m -XX:MaxPermSize=256m
-						-Dfile.encoding=UTF-8
-					</jvmArgs>
+					<skip>true</skip>
 				</configuration>
 			</plugin>
-
-			<!-- 启动h2的控制台 -->
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>java</goal>
-						</goals>
-					</execution>
-				</executions>
-				<dependencies>
-					<dependency>
-						<groupId>com.h2database</groupId>
-						<artifactId>h2</artifactId>
-						<version>1.4.178</version>
-					</dependency>
-				</dependencies>
-				<configuration>
-					<mainClass>org.h2.tools.Server</mainClass>
-					<includePluginDependencies>true</includePluginDependencies>
-					<arguments>
-						<argument>-web</argument>
-						<argument>-webPort</argument>
-						<argument>8090</argument>
-						<argument>-browser</argument>
-					</arguments>
-				</configuration>
-			</plugin>
-
-			<!-- liquibase插件 -->
-			<plugin>
-				<groupId>org.liquibase</groupId>
-				<artifactId>liquibase-maven-plugin</artifactId>
-				<version>3.0.5</version>
-				<configuration>
-					<changeLogFile>src/main/resources/liquibase/revolution-changelog.xml</changeLogFile>
-					<!-- <outputChangeLogFile>src/test/resources/liquibase/h2-changelog.xml</outputChangeLogFile> 
-						<migrationSqlOutputFile>src/test/resources/liquibase/octopus-sql.xml</migrationSqlOutputFile> -->
-
-					<driver>org.h2.Driver</driver>
-					<url>jdbc:h2:file:./target/h2/octopus</url>
-					<username>sa</username>
-					<password>sa</password>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>process-resources</phase>
-						<goals>
-							<!-- <goal>generateChangeLog</goal> <goal>updateSQL</goal> -->
-							<!--<goal>update</goal> -->
-							<goal>update</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
 		</plugins>
+
 	</build>
+	<profiles>
+		<profile>
+			<id>dev</id>
+		</profile>
+		<profile>
+			<id>test</id>
+		</profile>
+		<profile>
+			<id>prod</id>
+		</profile>
+	</profiles>
 
 
 </project>
